<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_answer">AnswerActivity</string>


    <string name="developer_name">Developed by Corentin TERENTE</string>
    <string name="dial">DIAL</string>
    <string name="mail">MAIL</string>
    <string name="dash">-</string>
    <string name="actual_score_text">Actual score</string>
    <string name="actual_score_default_value">0/20</string>
    <string name="settings">Settings</string>
    <string name="nav_play">Play</string>
    <string name="nav_score">Score</string>
    <string name="nav_info">Info</string>
    <string name="nav_settings">Settings</string>


    <string name="nav_add">Add Question</string>
    <string name="tel_number">tel:0066666666</string>
    <string name="email_address">mailto:emailaddress@emailaddress.com</string>
    <string name="toast_checked">Must check a proposition</string>
    <string name="toast_empty">Text field should no be empty</string>
    <string name="question_title">Question Title</string>
    <string name="question_response_proposition">Question Response Proposition</string>
    <string name="base_url">http://192.168.10.38:3000</string>
    <string name="pie_chart_good_answer">Bonnes réponses</string>
    <string name="pie_chart_wrong_answer">Mauvaises réponses</string>
    <string name="pie_chart_todo_questions">A faire</string>
</resources>
