<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:title="@string/nav_play"
            android:icon="@drawable/ic_play_arrow"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_score"
            android:title="@string/nav_score"
            android:icon="@drawable/ic_menu_share"
            />
        <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_info" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>



</menu>
