<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InfoActivity"
    android:orientation="vertical">

    <TextView
       android:id="@+id/textView_info"
       android:text="@string/developer_name"
       android:textAlignment="center"
       android:textSize="25sp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <Button
       android:id="@+id/button_dial"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/dial"/>
    <Button
        android:id="@+id/button_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"/>

</android.widget.LinearLayout>